compiler/testData/diagnostics/tests/redeclarations/EnumName.fir.kt
enum class <!REDECLARATION, REDECLARATION!>A<!> {
    <!REDECLARATION!>name<!>,
    <!REDECLARATION!>ordinal<!>,
    <!DEPRECATED_DECLARATION_OF_ENUM_ENTRY!>entries,<!>
}
